--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <div>
     <h1>Your Name</h1>
     <p>Researcher • Pharmacist • Epidemiologist</p>
-    <a class="btn" href="portfolio.html">Enter Portfolio</a>
+    <a class="btn" href="myportfolio.html">Enter Portfolio</a>
   </div>
 </div>
 
@@ -124,4 +124,5 @@ animate();
 
 </body>
 </html>
+
 
