--- a/photography.html
+++ b/photography.html
@@ -61,7 +61,7 @@
 
 <section class="gallery">
   <!-- Replace src with your own images -->
-  <img src="https://picsum.photos/500/600?1" alt="photo">
+  <img src="images/1.jpg">
   <img src="https://picsum.photos/500/500?2" alt="photo">
   <img src="https://picsum.photos/500/700?3" alt="photo">
   <img src="https://picsum.photos/500/550?4" alt="photo">
