--- a/portfolio.html
+++ b/portfolio.html
@@ -259,9 +259,10 @@ section {
   <h2>Scan My Portfolio</h2>
   <p>Scan the QR code to visit my website</p>
   <div id="qr-code"></div>
+</section>
+<section id="qr">
   <button id="download-qr">Download QR Code</button>
 </section>
-
 
 <footer>
   © 2025 GitHub. All rights reserved.
