--- a/portfolio.html
+++ b/portfolio.html
@@ -258,10 +258,8 @@ section {
 <section id="qr">
   <h2>Scan My Portfolio</h2>
   <p>Scan the QR code to visit my website</p>
+  <p><button id="download-qr">Download QR Code</button></p>
   <div id="qr-code"></div>
-</section>
-<section id="qr">
-  <button id="download-qr">Download QR Code</button>
 </section>
 
 <footer>
