--- a/photography.html
+++ b/photography.html
@@ -124,27 +124,6 @@
 
 .filters {
   text-align: center;
-  margin-bottom: 20px;
-}
-
-.filters button {
-  background: #1e293b;
-  color: #e5e7eb;
-  border: none;
-  padding: 8px 16px;
-  margin: 5px;
-  border-radius: 20px;
-  cursor: pointer;
-}
-
-.filters button.active,
-.filters button:hover {
-  background: #38bdf8;
-  color: #020617;
-}
-
-.filters {
-  text-align: center;
   margin: 20px 0;
 }
 
@@ -156,7 +135,7 @@
   margin: 5px;
   border-radius: 20px;
   cursor: pointer;
-  transition: 0.3s;
+  transition: background 0.3s, color 0.3s;
 }
 
 .filter-btn:hover,
@@ -165,10 +144,6 @@
   color: #020617;
 }
 
-.filter-btn.active {
-  background: #38bdf8;
-  color: #020617;
-}
 
 
 </style>
