--- a/photography.html
+++ b/photography.html
@@ -166,6 +166,9 @@
   <button class="filter-btn" data-filter="nature">Nature</button>
   <button class="filter-btn" data-filter="city">City</button>
   <button class="filter-btn" data-filter="night">Night</button>
+  <button class="filter-btn" data-filter="sun">Sun</button>
+  <button class="filter-btn" data-filter="morning">Morning</button>
+
 </div>
 
 <section class="gallery">
