--- a/photography.html
+++ b/photography.html
@@ -20,6 +20,11 @@
     z-index: 0;
   }
 
+  canvas {
+  pointer-events: none;
+}
+
+
   header, .gallery {
     position: relative;
     z-index: 1;
