--- a/portfolio.html
+++ b/portfolio.html
@@ -242,7 +242,7 @@ section {
   <h2>Photography</h2>
 
   <div class="projects">
-    <a href="photography.html" class="card">
+    <a href="photography" class="card">
       <h3>Photography Collection</h3>
       <p>A curated gallery of my photos and visual stories.</p>
     </a>
