--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -169,6 +169,8 @@ section {
 
 <body>
 
+<canvas id="starsCanvas"></canvas>
+
 <nav class="navbar">
   <a href="#about">About</a>
   <a href="#projects">Projects</a>
@@ -177,6 +179,7 @@ section {
   <a href="#awards">Awards</a>
   <a href="#photography">Photography</a>
 </nav>
+
 
 <header>
   <h1>Welcome to My Portfolio</h1>
