--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -236,7 +236,9 @@ section {
 
 <section id="publications">
   <h2>Publications</h2>
-  <p>• Personal blog posts on web design</p>
+  <a href="https://www.frontiersin.org/journals/endocrinology/articles/10.3389/fendo.2019.00695/full">
+     <p>• Cross-Linking/Mass Spectrometry Uncovers Details of Insulin-Like Growth Factor Interaction With Insect Insulin Binding Protein Imp-L2</p>
+  </a>
   <p>• Photo features on school magazine</p>
 </section>
 
