--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -123,6 +123,23 @@ section {
   scroll-margin-top: 70px;
 }
 
+#publications {
+  line-height: 1.8;
+}
+
+.goto-link {
+  margin-left: 6px;
+  color: #38bdf8;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.goto-link:hover {
+  color: #60a5fa;
+  text-decoration: underline;
+}
+
+
 #qr {
   text-align: center;
 }
