--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -256,6 +256,15 @@ section {
 
 <section id="publications">
   <h2>Publications</h2>
+    <p>• Mutations at hypothetical binding site 2 in insulin and insulin-like growth factors 1 and 2 result in receptor- and hormone-specific responsesInsulin and IGFs respond to equivalent mutations differently</p>
+      <a
+      href="https://www.sciencedirect.com/science/article/pii/S0021925820307328?via%3Dihub"
+      target="_blank"
+      rel="noopener noreferrer"
+      class="goto-link"
+    >
+      [Go to ↗]
+    </a>
   <p>• Cross-Linking/Mass Spectrometry Uncovers Details of Insulin-Like Growth Factor Interaction With Insect Insulin Binding Protein Imp-L2</p>
       <a
       href="https://www.frontiersin.org/journals/endocrinology/articles/10.3389/fendo.2019.00695/full"
@@ -263,7 +272,7 @@ section {
       rel="noopener noreferrer"
       class="goto-link"
     >
-      [Go to]
+      [Go to ↗]
     </a>
   <p>• Photo features on school magazine</p>
 </section>
