--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -256,7 +256,34 @@ section {
 
 <section id="publications">
   <h2>Publications</h2>
-    <p>• Mutations at hypothetical binding site 2 in insulin and insulin-like growth factors 1 and 2 result in receptor- and hormone-specific responsesInsulin and IGFs respond to equivalent mutations differently</p>
+   <p>• Plasmodium falciparum malaria in six travellers returning from Zanzibar to Italy, December 2023 to February 2025: a case series</p>
+      <a
+      href="https://www.eurosurveillance.org/content/10.2807/1560-7917.ES.2025.30.25.2500412"
+      target="_blank"
+      rel="noopener noreferrer"
+      class="goto-link"
+    >
+      [Go to ↗]
+    </a>
+   <p>• Recombinant Insulin-Like Growth Factor 1 Dimers: Receptor Binding Affinities and Activation Abilities</p>
+      <a
+      href="https://link.springer.com/article/10.1007/s10989-023-10499-1"
+      target="_blank"
+      rel="noopener noreferrer"
+      class="goto-link"
+    >
+      [Go to ↗]
+    </a>
+  <p>• Targeting the insulin receptor with hormone and peptide dimers</p>
+      <a
+      href="https://onlinelibrary.wiley.com/doi/10.1002/psc.3461"
+      target="_blank"
+      rel="noopener noreferrer"
+      class="goto-link"
+    >
+      [Go to ↗]
+    </a> 
+  <p>• Mutations at hypothetical binding site 2 in insulin and insulin-like growth factors 1 and 2 result in receptor- and hormone-specific responsesInsulin and IGFs respond to equivalent mutations differently</p>
       <a
       href="https://www.sciencedirect.com/science/article/pii/S0021925820307328?via%3Dihub"
       target="_blank"
