--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -213,20 +213,44 @@ section {
 <section id="projects">
   <h2>Projects</h2>
   <div class="projects">
-    <div class="card">
-      <h3>Project One</h3>
-      <p>A simple website made with HTML & CSS.</p>
+    <div class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <h3>Project One</h3>
+          <p>A simple website made with HTML & CSS.</p>
+        </div>
+        <div class="flip-card-back">
+          <p>Word</p> <!-- Text shown on flip -->
+        </div>
+      </div>
     </div>
-    <div class="card">
-      <h3>Project Two</h3>
-      <p>JavaScript mini game or animation.</p>
+
+    <div class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <h3>Project Two</h3>
+          <p>JavaScript mini game or animation.</p>
+        </div>
+        <div class="flip-card-back">
+          <p>Details about Project Two</p>
+        </div>
+      </div>
     </div>
-    <div class="card">
-      <h3>Project Three</h3>
-      <p>Responsive portfolio design.</p>
+
+    <div class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <h3>Project Three</h3>
+          <p>Responsive portfolio design.</p>
+        </div>
+        <div class="flip-card-back">
+          <p>Details about Project Three</p>
+        </div>
+      </div>
     </div>
   </div>
 </section>
+
 
 <section id="skills">
   <h2>Skills</h2>
