--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -122,6 +122,53 @@ section.show {
 section {
   scroll-margin-top: 70px;
 }
+.flip-card {
+  background-color: transparent;
+  width: 250px;
+  height: 200px;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+  border-radius: 15px;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 15px;
+  box-sizing: border-box;
+}
+
+.flip-card-front {
+  background-color: #020617;
+  color: #e5e7eb;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+}
+
+.flip-card-back {
+  background-color: #38bdf8;
+  color: #020617;
+  transform: rotateY(180deg);
+  font-weight: bold;
+}
+
 
 #publications {
   line-height: 1.8;
